added vue to docker-compose

--- a/nginx/default.dev.conf
+++ b/nginx/default.dev.conf
@@ -6,9 +6,15 @@ server {
 	access_log       /var/log/nginx/nginx.access.log  main;
 
 	location / {
-		root       /usr/share/nginx/html;
-		try_files  $uri $uri/ /index.html;
-		index      index.html index.htm;
+		proxy_redirect                      off;
+		proxy_set_header Host               $host;
+		proxy_set_header X-Real-IP          $remote_addr;
+		proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto  $scheme;
+		proxy_read_timeout                  1m;
+		proxy_connect_timeout               1m;
+
+		proxy_pass                          http://ui:8080/;
 	}
 
 	location /api/storage/ {
@@ -28,11 +34,6 @@ server {
 		proxy_set_header    X-Real-IP              $remote_addr;
 		proxy_set_header    X-Forwarded-For        $proxy_add_x_forwarded_for;
 		proxy_set_header    X-Forwarded-Proto      $scheme;
-
-		add_header          X-Frame-Options        "SAMEORIGIN"                 always;
-		add_header          X-XSS-Protection       "1; mode=block"              always;
-		add_header          X-Content-Type-Options "nosniff"                    always;
-		add_header          Referrer-Policy        "no-referrer-when-downgrade" always;
 
 		proxy_pass          http://api:3000/;
 	}
