--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,7 +15,7 @@ services:
             - 80:80
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./nginx/default.dev.conf:/etc/nginx/conf.d/default.conf
             - ./ui/dist:/usr/share/nginx/html
         restart: always
         networks:
@@ -27,6 +27,7 @@ services:
         hostname: ui
         build:
             context: ./ui
+        entrypoint: "npm run start:dev"
         ports:
             - 8080:8080
         volumes:
@@ -42,6 +43,7 @@ services:
         hostname: api
         build:
             context: ./api
+        entrypoint: "npm run start:dev"
         ports:
             - 3000:3000
         restart: always
